Fixed mobile header overlap

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -403,6 +403,12 @@ p.copyright {
   }
 }
 
+@media(min-width:768px) {
+  .navbar-default .navbar-collapse.navbar-fade {
+    opacity: 1 !important;
+  }
+}
+
 @media(max-width:767px) {
   .navbar-default .navbar-nav {
     display: block;
@@ -451,23 +457,28 @@ p.copyright {
   .navbar-default .navbar-collapse {
     position: absolute;
     top: 0;
-    z-index: -1;
+    z-index: -2;
     padding-top: 60px;
     width: 100%;
-    background: #1E1E1E;
     transform: translateY(-100%);
     -webkit-transform: translateY(-100%);
-    opacity: 0;
-    transition: opacity 0.5s, transform 0.25s;
+    transition: transform 0.25s, opacity 0.25s;
     box-shadow: none;
     max-height: initial;
+    background-color: rgb(30, 30, 30);
   }
   .navbar-default .navbar-collapse.expand {
     display: block;
     overflow: hidden;
     transform: translateY(0);
     -webkit-transform: translateY(0);
-    opacity: 1;
+  }
+  .navbar-default .navbar-collapse.navbar-fade {
+    display: block;
+    opacity: 0;
+  }
+  .navbar-default .navbar-collapse.expand.navbar-fade {
+    opacity: 1 !important;
   }
   .navbar-toggle {
     margin: 13px;
